[16739] Added EsMessageProcessorBean MDB class and ejb-jar.xml descriptor.
git-svn-id: https://svn.dbc.dk/repos/dataio/trunk@64189 b87a6194-a221-0410-ad6f-3b8ec35bba13